<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_product_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_code" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addProduct"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="10dp"
                android:text="@string/save"
                android:backgroundTint="@color/grey_700"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_second"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="10dp"
                android:text="cancel"
                android:backgroundTint="@color/grey_700"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>